--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -57,7 +57,10 @@ schedule:
               kind: speech
               title: Verdi og brukervennlighet
               teams: https://teams.microsoft.com/l/meetup-join/19%3ameeting_NGRiMDcwN2EtOGJiOC00YWRiLWFkM2UtMTI1NWQ3OGY1Yjgy%40thread.v2/0?context=%7b%22Tid%22%3a%222f46c919-7c11-4465-84b2-e354fb809979%22%2c%22Oid%22%3a%2202c0aa84-ceb9-48d7-b5e2-805e30e52583%22%7d
-              speaker: Ove Dalen          
+              speaker: Ove Dalen    
+              ingress: Dette foredraget vil handle om å definere målbar verdi på områder der målsettingen er samfunnsnytte. Han har eksempler fra bla Oslo kommune der de fant løsninger for å regne om forenklede brukeropplevelser til kroner og øre.
+              description: | 
+                Ove Dalen er rådgiver i Netlife og regnes som en av landets fremste eksperter på digitalkommunikasjon og kundeopplevelse. Han jobber i skjæringspunktet mellom forretningsutvikling, design og teknologi og hjelper i dag noen av landets mest ambisiøse selskaper med å lage digitale tjenester, apper og nettsteder. Ove har blant annet gitt ut bøkene «Digital strategi for alle» (2015) og «Effektiv nettskriving» (2018 og har lang erfaring som foredragsholder.
             - start: 2024-04-17:13.50
               end: 2024-04-17:14.50
               kind: speech
@@ -173,6 +176,9 @@ schedule:
               kind: workshop
               title: Verdi og brukervennlighet
               speaker: Ove Dalen  
+              ingress: Hvordan kan vi praktisk definere målbar verdi på områder der målsettingen er samfunnsnytte?
+              description: | 
+                Ove Dalen er rådgiver i Netlife og regnes som en av landets fremste eksperter på digitalkommunikasjon og kundeopplevelse. Han jobber i skjæringspunktet mellom forretningsutvikling, design og teknologi og hjelper i dag noen av landets mest ambisiøse selskaper med å lage digitale tjenester, apper og nettsteder. Ove har blant annet gitt ut bøkene «Digital strategi for alle» (2015) og «Effektiv nettskriving» (2018 og har lang erfaring som foredragsholder.
             - start: 2024-04-17:15.10
               end: 2024-04-17:16.25
               kind: workshop
