--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -252,10 +252,13 @@ schedule:
             - start: 2024-04-18:10.20
               end: 2024-04-18:10.50
               kind: speech
-              title: Bifrost som innovasjonsprosjekt
+              title: Bifrost modellen
               teams: https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODNiODk5OTMtNjhhNC00YzEyLWJiMTEtNzljNzU3OTBmNzRi%40thread.v2/0?context=%7b%22Tid%22%3a%222f46c919-7c11-4465-84b2-e354fb809979%22%2c%22Oid%22%3a%2202c0aa84-ceb9-48d7-b5e2-805e30e52583%22%7d
-              ingress:
-              description:
+              ingress: Bifrost har etablert en samarbeidsmodell for bruker- og kundenærutvikling. Ved å ansvarliggjøre sluttbrukeren gjennom tidlig testing i DIPS Arena blir tilbakemeldingene på funksjonalitet vesentlig mer relevant.
+              description: | 
+                I foredraget presenteres modellen ved å vise til prosjekt som har blitt veldig gode. Kanskje enda viktigere for læring er å snakke om faktorer som virker negativt på resultatet.
+ 
+                Vi ser frem til å dele våre erfaringer med deg!
               speaker: Bjørn Næss og Morten Hørthe
             - start: 2024-04-18:10.50
               end: 2024-04-18:11.15
