--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -55,12 +55,13 @@ schedule:
             - start: 2024-04-17:12.45
               end: 2024-04-17:13.30
               kind: speech
-              title: Verdi og brukervennlighet
+              title: | 
+                Fra leveranse til verdi: Effekt i digitale produkter i helsesektoren
               teams: https://teams.microsoft.com/l/meetup-join/19%3ameeting_NGRiMDcwN2EtOGJiOC00YWRiLWFkM2UtMTI1NWQ3OGY1Yjgy%40thread.v2/0?context=%7b%22Tid%22%3a%222f46c919-7c11-4465-84b2-e354fb809979%22%2c%22Oid%22%3a%2202c0aa84-ceb9-48d7-b5e2-805e30e52583%22%7d
               speaker: Ove Dalen    
-              ingress: Dette foredraget vil handle om å definere målbar verdi på områder der målsettingen er samfunnsnytte. Han har eksempler fra bla Oslo kommune der de fant løsninger for å regne om forenklede brukeropplevelser til kroner og øre.
+              ingress: Hvordan måle suksess når vi ikke selger joggesko eller driver nettbutikk? Brukervennlighet i apper og digitale produkter i helsektoren er ikke koselig pynt. Det er ofte helt avgjørende for at leger og helsepersonell skal få gjort jobben sin. Dette foredraget handler om hvordan vi kan lage løsninger som gir verdi til både brukerne, samfunnet og virksomhetene.
               description: | 
-                Ove Dalen er rådgiver i Netlife og regnes som en av landets fremste eksperter på digitalkommunikasjon og kundeopplevelse. Han jobber i skjæringspunktet mellom forretningsutvikling, design og teknologi og hjelper i dag noen av landets mest ambisiøse selskaper med å lage digitale tjenester, apper og nettsteder. Ove har blant annet gitt ut bøkene «Digital strategi for alle» (2015) og «Effektiv nettskriving» (2018 og har lang erfaring som foredragsholder.
+                Ove Dalen er rådgiver i Netlife og regnes som en av landets fremste eksperter på digitalkommunikasjon og kundeopplevelse. Han jobber i skjæringspunktet mellom forretningsutvikling, design og teknologi og hjelper i dag noen av landets mest ambisiøse selskaper med å lage digitale tjenester, apper og nettsteder. Ove har blant annet gitt ut bøkene «Digital strategi for alle» (2015) og «Effektiv nettskriving» (2018) og har lang erfaring som foredragsholder.
             - start: 2024-04-17:13.50
               end: 2024-04-17:14.50
               kind: speech
@@ -174,9 +175,9 @@ schedule:
             - start: 2024-04-17:13.50
               end: 2024-04-17:14.50
               kind: workshop
-              title: Verdi og brukervennlighet
+              title: Hvordan jobbe med effekt og verdi i DIPS
               speaker: Ove Dalen  
-              ingress: Hvordan kan vi praktisk definere målbar verdi på områder der målsettingen er samfunnsnytte?
+              ingress: Vi jobber med oppgaver for å komme nærmere hva DIPS kan gjøre for å jobbe mer målrettet med verdi i sine digitale løsninger.
               description: | 
                 Ove Dalen er rådgiver i Netlife og regnes som en av landets fremste eksperter på digitalkommunikasjon og kundeopplevelse. Han jobber i skjæringspunktet mellom forretningsutvikling, design og teknologi og hjelper i dag noen av landets mest ambisiøse selskaper med å lage digitale tjenester, apper og nettsteder. Ove har blant annet gitt ut bøkene «Digital strategi for alle» (2015) og «Effektiv nettskriving» (2018 og har lang erfaring som foredragsholder.
             - start: 2024-04-17:15.10
