--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -273,12 +273,13 @@ schedule:
             - start: 2024-04-18:11.25
               end: 2024-04-18:12.00
               kind: speech
-              title: Embracing GitHub CoPilot in our daily work
+              title: Embracing GitHub Copilot in our daily work
               teams: https://teams.microsoft.com/l/meetup-join/19%3ameeting_NzRkOTg3N2QtZGYxNi00ZmM1LWI4YWQtNjdjZjBjMzVkMDE0%40thread.v2/0?context=%7b%22Tid%22%3a%222f46c919-7c11-4465-84b2-e354fb809979%22%2c%22Oid%22%3a%2202c0aa84-ceb9-48d7-b5e2-805e30e52583%22%7d
-              ingress: "GitHub CoPilot: Vi snakker om gevinster, svakheter og muligheter med dette verktøyet."
+              ingress: Vi diskuterer GitHub Copilot, og presenterer eksempler på bruk fra virkeligheten hentet fra DIPS.
               description: |
-                Vi kommer til å vise en live-demo med real world eksempler fra hvordan en utvikler i DIPS har brukt CoPilot i sitt daglige arbeid.
-                Vi ønsker også å vise utviklere i DIPS hvordan de kan effektivisere hverdagen sin ved å bruke Github CoPilot.
+                Vi diskuterer gevinster, svakheter og muligheter, og deler eksempler fra virkeligheten om hvordan en utvikler i DIPS har brukt Copilot i sitt daglige arbeid.
+
+                Noe av målet vårt er å vise utviklere i DIPS hvordan de kan effektivisere arbeidsdagen sin ved å bruke Github Copilot.
               speaker: Askar Mehdi og Bjørn Fjukstad
             - start: 2024-04-18:12.45
               end: 2024-04-18:13.15
