--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -19,6 +19,9 @@ schedule:
           end: 2024-04-17:17.30
           title: Pause 15 minutter
         - start: 2024-04-17:18.15
+          end: 2024-04-17:18.30
+          title: Kald drikke
+        - start: 2024-04-17:18.30
           end: 2024-04-17:20.00
           title: Middag
       tracks:
