--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -336,6 +336,7 @@ schedule:
             - start: 2024-04-18:10.10
               end: 2024-04-18:11.00
               kind: speech
+              teams: https://teams.microsoft.com/l/meetup-join/19%3ameeting_OTY4OWJkMjktMjUyZS00Y2JjLTlmNDMtZDRlMGEzYjRiMTVm%40thread.v2/0?context=%7b%22Tid%22%3a%222f46c919-7c11-4465-84b2-e354fb809979%22%2c%22Oid%22%3a%2202c0aa84-ceb9-48d7-b5e2-805e30e52583%22%7d
               title: Automatisert test møter universell utforming
               ingress: Det finnes mye rart ute på nettet. Noen nettsteder er et mareritt å navigere for alle, andre er bare forferdelig for mennesker med nedsatt funksjonsevne. Noen nettsteder er umulige å navigere med en skjermleser. Andre inneholder tastaturfeller eller bruker farger som er bedre egnet til å kamuflere teksten enn å gjøre den lesbar. 
                 
