Added Siv Marie

--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -82,9 +82,9 @@ schedule:
               teams: https://teams.microsoft.com/l/meetup-join/19%3ameeting_OGJiMGM4ZWUtMDk5OC00ZTJmLTk2OGUtOTc5MWU2ZDcxYmNk%40thread.v2/0?context=%7b%22Tid%22%3a%222f46c919-7c11-4465-84b2-e354fb809979%22%2c%22Oid%22%3a%2202c0aa84-ceb9-48d7-b5e2-805e30e52583%22%7d
               ingress: Siv Marie, Trond Fredrik og Agnete har gjennomført flere kaffeprater med sentrale personer involvert i transformasjonene hos Politiet, Gyldendal, Nav og Sparebank 1. 
               description: |
-                Dette var for å hente inspirasjon fra hvordan andre som ligger foran oss i løypa har jobbet med transformasjon. Trond Fredrik og Agnete deler hva som kom frem i samtalene. Dette blir delvis presentasjon og delvis diskusjon 
+                Dette var for å hente inspirasjon fra hvordan andre som ligger foran oss i løypa har jobbet med transformasjon. Siv Marie, Trond Fredrik og Agnete deler hva som kom frem i samtalene. Dette blir delvis presentasjon og delvis diskusjon 
                 - hva betyr dette for oss?
-              speaker: Trond Fredrik Schjander-Opsahl og Agnete Enga
+              speaker: Siv Marie Lien, Trond Fredrik Schjander-Opsahl og Agnete Enga
             - start: 2024-04-17:16.15
               end: 2024-04-17:16.45              
               kind: speech
